--- a/gb/20/10/19/n12487702.md
+++ b/gb/20/10/19/n12487702.md
@@ -23,6 +23,11 @@
 <p>随着欧洲各地案例的增多，英国、法国、西班牙的一些城市正在集中力量实施更严格的封锁措施来遏制病毒传播，而包括川普（特朗普）总统在内的许多美国领导人继续敦促开放经济。川普表示，如果他“完全”听取了科学家有关中共病毒相关封锁措施的建议，美国早就陷入了“大萧条”之中。</p>
 <p>=======================</p>
 <h2>以下是<ahref="https://github.com/sjgjny386/djy/blob/master/gb/tag/%E6%9C%80%E6%96%B0%E7%96%AB%E6%83%85.md#1">最新疫情</a>实时更新：</h2>
+<h3>阿根廷的Covid-19病例破百万</h3>
+<p>阿根廷卫生部的数据显示，阿根廷在周一的感染Covid-19的病例总数已突破100万例。</p>
+<p>阿根廷卫生部周二报告，在过去24小时内，该国增加了12,982例新病例，使阿根廷已知病例总数达到1,002,662例。</p>
+<p>该国卫生部还报告当天有451例新的与该病毒相关的死亡病例，使该国总的死亡病例数达到26,716例。</p>
+<p>根据约翰-霍普金斯大学的数据，阿根廷是继美国、印度、巴西和俄罗斯之后，成为全球第五个报告已知病例数超过100万的国家。</p>
 <p><a name="_Toc2020102008"></a></p>
 <h3>川普：若全听科学家的 美国将陷大萧条</h3>
 <p>美国总统川普（特朗普）表示，如果他“完全”听取了科学家有关中共病毒相关封锁措施的建议，美国将陷入“大萧条”。</p>
@@ -101,7 +106,7 @@
 
 <strong>编辑推荐：</strong>
 <li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/11/1/n10823173.md#1" target="_blank">【还原史实】中共“大跃进” 四千万中国人活活饿死</a></li><li><a href="https://github.com/sjgjny386/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank">亿万人与东方一本奇书</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/4/2/n8993904.md#1" target="_blank">【细语人生】见证大法的神奇（3）</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/10/21/n10799353.md#1" target="_blank">潜伏在中华民国和台湾的中共间谍（1）</a></li><li><a href="https://github.com/sjgjny386/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank">藏字石 蕴天机</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/10/n11247031.md#1" target="_blank">加拿大渥太华市长连续9年宣布 法轮大法日</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
