--- a/gb/nf1351518.md
+++ b/gb/nf1351518.md
@@ -13,12 +13,12 @@
 <a href="https://github.com/sjgjny386/djy/blob/master/gb/20/10/19/n12486027.md#1" title="丑闻爆发前 脸书推特高层加入拜登竞选团队""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/10/GettyImages-1228999788-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/sjgjny386/djy/blob/master/gb/20/10/18/n12484974.md#1" title="抗共大事记：中共挑衅西方 加国罕见狠批北京 (10/12-10/18)""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/09/CP18954986-320x200.jpg">&nbsp;</a>
 <p align="center"><a href="https://github.com/sjgjny386/djy/blob/master/gb/nf4514.md#1">更多头条......</a><hr><h2><p><strong>即时快讯&nbsp;&#160;&nbsp;&#160; :bar_chart: <a target="_blank" href="https://sjgjny386.github.io/vd/yq.html">全球疫情地图</a></strong></p></h2>
-:clock8: <em>1分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/sjgjny386/djy/blob/master/gb/20/10/19/n12487679.md#1">怕拜登加税 美非裔说唱歌手50 Cent改投川普</a><br>
-:clock8: <em>22分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/sjgjny386/djy/blob/master/gb/20/10/20/n12487933.md#1">中石油前职员杀前雇主夫妇等4人后跳楼身亡</a><br>
-:clock8: <em>44分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/sjgjny386/djy/blob/master/gb/20/10/20/n12487770.md#1">【远见快评】拜登家丑闻4连爆 中共人质外交</a><br>
+:clock8: <em>8分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/sjgjny386/djy/blob/master/gb/20/10/20/n12487975.md#1">美委员会吁华府制定战略 健全ICT供应链</a><br>
+:clock8: <em>18分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/sjgjny386/djy/blob/master/gb/20/10/19/n12487679.md#1">怕拜登加税 美非裔说唱歌手50 Cent改投川普</a><br>
+:clock8: <em>39分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/sjgjny386/djy/blob/master/gb/20/10/20/n12487933.md#1">中石油前职员杀前雇主夫妇等4人后跳楼身亡</a><br>
+:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/sjgjny386/djy/blob/master/gb/20/10/20/n12487770.md#1">【远见快评】拜登家丑闻4连爆 中共人质外交</a><br>
 :clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/sjgjny386/djy/blob/master/gb/20/10/19/n12487702.md#1">【最新疫情10.20】川普：全听科学的 美将陷萧条</a><br>
-:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/sjgjny386/djy/blob/master/gb/20/10/19/n12487512.md#1">深圳巨额投资天使母基金 为失败者买单遭讽</a><br>
-:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/sjgjny386/djy/blob/master/gb/20/10/20/n12487884.md#1">湖北高院副院长在办公室自杀身亡</a><br>
+:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/sjgjny386/djy/blob/master/gb/20/10/19/n12487512.md#1">深圳巨额投资天使母基金 为失败者买单遭讽</a><br>
 <hr><h2><p><strong>新闻排行</strong></p></h2>
 <a href="https://github.com/sjgjny386/djy/blob/master/gb/20/10/18/n12483904.md#1">【翻墙必看】习在京露面 分析：暴露诡异之处</a><br>
 <a href="https://github.com/sjgjny386/djy/blob/master/gb/20/10/18/n12484117.md#1">涉习江斗还是怕“光明”光明乳业被罚引热议</a><br>
@@ -40,7 +40,7 @@
 
 ```diff
 !退出中共党、团、队总人数:
-!共 365,866,248 人
+!共 365,866,266 人
 ```
 </strong><p align="center"><strong align="center"><a href="https://x.co/dd3">我要退出中共党团队</a></strong></h2></td>
 <td VALIGN=TOP width="352">
