--- a/gb/20/10/19/n12487702.md
+++ b/gb/20/10/19/n12487702.md
@@ -106,7 +106,7 @@
 
 <strong>编辑推荐：</strong>
 <li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/10/21/n10799353.md#1" target="_blank">潜伏在中华民国和台湾的中共间谍（1）</a></li><li><a href="https://github.com/sjgjny386/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank">藏字石 蕴天机</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/10/n11247031.md#1" target="_blank">加拿大渥太华市长连续9年宣布 法轮大法日</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/9/10/n10702629.md#1" target="_blank">【还原史实】反右运动 中国知识分子惨遭摧折</a></li><li><a href="https://github.com/sjgjny386/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank">中共的伪火骗局</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/3/11/n11105711.md#1" target="_blank">内蒙那达慕大会的无敌手 劫后遇佛缘</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
